# microshop

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  crud.py  db.py  docker-compose.yaml  entry.sh  items_views.py  main.py  package.json  pyproject.toml  queries.sql  requirements.txt  weather.html
backend/: Dockerfile  alembic.ini  crud.py  entrypoint.sh  index.html  main.py  pyproject.toml  run_main.py
backend/actions/: create_superuser.py
backend/alembic/versions/: 2025_09_26_1500-af1092652727_create_product_table.py  2025_09_26_1535-0cc3c27eafd7_create_user_table.py  2025_09_26_1543-53f8b30a4eeb_create_post_table.py  2025_09_27_0020-34fafed7eb55_create_profile_table.py  2025_09_27_1448-d32229aaf6a1_create_order_table.py  2025_10_01_1616-88a0056ed8a8_add_field_password_to_user.py  2025_10_02_1124-1be8e4e267ce_add_field_hashed_password_to_user.py  2025_10_02_1126-319a5c7b06c2_add_field_hashed_password_to_user.py  2025_10_05_2010-62dfe3e7b819_create_order_table.py  2025_10_05_2022-318514e3972f_add_hashed_password_to_user.py  2025_10_05_2023-5e332fc090fa_add_hashed_password_to_user.py  2025_10_06_1540-8ed4c79db229_add_hashed_email_to_profile.py  2025_10_06_1608-355aa789cba7_add_active_to_user.py  2025_10_07_1324-06563a2a8e6e_add_users_api_to_user_model.py  2025_10_09_1217-99141265b903_add_access_token_model.py  2025_10_10_1023-98031b9a7322_change_hashed_password_to_string.py  2025_10_10_1221-a94d55451b66_remove_id_from_accesstoken.py
backend/api_v1/: __init__.py
backend/api_v1/auth/: jwt.py  (+6 more)
backend/core/: config.py  middleware.py
backend/tests/: test_api.py
backend/tokens/: schemas.py
backend/users/: crud.py  schemas.py  views.py
(+91 files in other folders)
